force-app/main/default/objects/vlocity_cmt__Datastore__c/fields/vlocity_cmt__CachedDataSetId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CachedDataSetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies a Cached Data Set entry.</description>
    <label>Cached Data Set</label>
    <referenceTo>vlocity_cmt__CachedDataSet__c</referenceTo>
    <relationshipLabel>Data Stores</relationshipLabel>
    <relationshipName>DataStores</relationshipName>
    <type>Lookup</type>
</CustomField>