force-app/main/default/objects/vlocity_cmt__Datastore__c/fields/vlocity_cmt__Classname__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Classname__c</fullName>
    <description>The fully qualified class name of the reader class to use to deserialize the value of this entry.</description>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>