force-app/main/default/objects/vlocity_cmt__Datastore__c/fields/vlocity_cmt__EffectiveEndDateTime__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__EffectiveEndDateTime__c</fullName>
    <label>Effective End Date</label>
    <type>DateTime</type>
</CustomField>