force-app/main/default/objects/vlocity_cmt__Datastore__c/fields/vlocity_cmt__Key__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Key__c</fullName>
    <description>The full key field (up to 255 characters) which fully identifies this entry in the data store.</description>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>