force-app/main/default/objects/vlocity_cmt__Datastore__c/recordTypes/vlocity_cmt__CPQAPI.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__CPQAPI</fullName>
    <active>true</active>
    <description>CPQ API partition</description>
    <label>CPQAPI</label>
</RecordType>