force-app/main/default/objects/vlocity_cmt__Datastore__c/recordTypes/vlocity_cmt__ProductHierarchy.recordType-meta.xml
<RecordType>
    <fullName>vlocity_cmt__ProductHierarchy</fullName>
    <active>true</active>
    <description>Flatenned Product Hierarchy Items</description>
    <label>Product Hierarchy</label>
</RecordType>